Tickets is ready for 3.8!
git-svn-id: https://plugins.svn.wordpress.org/tikipress-2010/trunk@324829 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/includes/css/attendee.css
+++ b/includes/css/attendee.css
@@ -1,3 +1,4 @@
+/* This css is only for the attendee shortcode page - you can put other css here but it gets called on everypage so be careful! */
 #content div.attendee img {
 float:left;
 margin-bottom:0;
