adding in dashboard widget
git-svn-id: https://plugins.svn.wordpress.org/tikipress-2010/trunk@339429 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/includes/css/admin.css
+++ b/includes/css/admin.css
@@ -67,3 +67,23 @@ width: 60%;
 	width:40%;
 	padding:20px;
 }
+
+/*
+Dashboard Widget CSS
+*/
+#bpt_dashboard_info{
+float:left;
+Width:50%;
+}
+
+#bpt_dashboard_graph{
+float:left;
+width:50%;
+}
+
+.btp_dashboard_stat{
+margin-bottom: 5px;
+margin-top: 8px;
+display: block;
+}
+
